# parseltongue

./: .env.example  .gitignore  .pgignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  atoms.py  core.py  engine.py  lang.py  parseltongue.pltg  pg-restart.sh  pyproject.toml
.github/workflows/: ci.yml  codestats.yml  consistency.yml  publish.yml  security.yml
core/: __init__.py  atoms.py  engine.py  lang.py
core/demos/apples/: demo.py
core/demos/biomarkers/: demo.py
core/demos/revenue_reports/: demo.py
core/quote_verifier/: __init__.py  config.py  index.py  normalizer.py  verifier.py
core/tests/: test_atoms.py  test_engine.py  test_lang.py  test_loader.py  test_performance.py  test_quote_verifier.py
demos/apples/: demo.py
demos/apples/resources/: eden_inventory.txt  orchard_inventory.txt
demos/biomarkers/: demo.py
demos/revenue_reports/: demo.py
demos/revenue_reports/resources/: bonus_policy.txt  targets_memo.txt
documentation/: DISCOVERED-USECASES.md
llm/: __init__.py  dsl_reference.py  pipeline.py  provider.py  resolve.py  tools.py
llm/demos/revenue/: demo.py
llm/demos/revenue/resources/: q3_report.txt
llm/tests/: test_dsl_reference.py  test_pipeline.py  test_prompts.py  test_provider.py  test_resolve.py  test_tools.py
parseltongue/: __init__.py  __main__.py  llm_doc.py
parseltongue.tmbundle/: info.plist
parseltongue.tmbundle/Syntaxes/: parseltongue.tmLanguage.json
parseltongue/cli/: README.md  __init__.py  app.py  config.py  export_resolver.py  history.py  ingest.py  interactive.py  runner.py
parseltongue/cli/tests/: test_export_resolver.py  test_interactive.py
parseltongue/cli/tests/widgets/: test_pass_viewer.py  test_pass_viewer_patterns.py
parseltongue/cli/tui/: __init__.py  app.py  app.tcss  pltg_highlight.py
parseltongue/cli/tui/screens/: answer.py  companion_repair.py  configure.py  confirm.py  consistency.py  consistency_alert.py  document_picker.py  editor.py  folder_picker.py  history_browser.py  input_modal.py  live_pass.py  loading.py  main_menu.py  modules.py  passes.py  project_files.py  query_input.py  quit_modal.py  recent_projects.py  system_state.py  viewer.py
parseltongue/cli/tui/widgets/: __init__.py  colors.py  (+9 more)
parseltongue/core/: README.md  __init__.py  ast.py  atoms.py  companion.py  companion_integrity.py  default_system_settings.py  engine.py  grammar.py  lang.py  loader.py  morphism.py  system.py
parseltongue/core/inspect/: SKILL.md  __init__.py  bench.pltg  bench.py  bench_cli.py  diagnosis.py  evaluation.py  inspect.py  lens.py  llm_inspect_guide.md  llm_pg_bench_guide.md  llm_python_dev_guide.md  perspective.py  probe_core_to_consequence.py  search.py  searchable.py  serialization.py  store.py  technician.py
parseltongue/core/integrity/: __init__.py  chain.py  merkle.py
parseltongue/core/loader/: __init__.py  lazy_loader.py  lazy_loader_design.md  loader.py  loader_engine.py  loader_morphism.py  loader_translator.py
parseltongue/core/notebooks/: companion.py  companion_integrity.py  pgmd.py
parseltongue/core/quote_verifier/: __init__.py  config.py  index.py  normalizer.py  verifier.py
parseltongue/core/serialization/: __init__.py  serializers.py
parseltongue/core/std/: counting.pltg  epistemics.pltg  higher_order.pltg  lists.pltg  predicates.pltg  std.pltg  unquote.pltg  util.pltg  verify_manual.pltg
parseltongue/core/tests/: quote_verifier_v2_old.py  test_and_forms_loop.py  test_ast.py  test_atoms.py  test_bench.py  test_bench_map_reduce.py  test_bench_map_reduce_scoped.py  test_bench_pltg.py  test_bench_search_language.py  test_bench_std_import.py  test_complex_bench_requests.py  test_engine.py  test_engine_resolve.py  test_eval_bind.py  test_eval_bind_bench.py  test_inspect.py  test_integrity.py  test_integrity_base.py  test_lang.py  test_lazy_loader.py  test_loader.py  test_loader_morphism.py  test_loader_pltg.py  test_module_imports.py  test_module_imports_synthetic.py  test_ops_system_bench.py  test_parseltongue_core_consistency.py  test_pattern_vars.py  test_performance.py  test_quote.py  test_quote_verifier.py  test_scopes.py  test_search.py  test_serialization.py  test_splat_vars.py
parseltongue/core/validation/: ast_verifier.pltg  atoms.pltg  core.pltg  core_clean.pltg  counting.pltg  default_system_settings.pltg  demos.pltg  domain.pltg  engine.pltg  engine_scopes.pltg  inspect_bench.pltg  inspect_evaluate.pltg  inspect_hologram.pltg  inspect_lens.pltg  inspect_main.pltg  inspect_search.pltg  integrity.pltg  lang.pltg  lazy_loader.pltg  loader.pltg  pyproject.pltg  quote_verifier.pltg  readme.pltg  self_test.pltg  system.pltg  util.pltg  verify_manual.pltg
parseltongue/llm/: README.md  __init__.py  dsl_reference.py  openrouter.py  pipeline.py  prompts.py  provider.py  resolve.py
parseltongue/llm/demos/: _output.py
parseltongue/llm/tests/: test_cancel.py  test_dsl_reference.py  test_pipeline.py  test_prompts.py  test_provider.py  test_resolve.py  test_tools.py
quote_verifier/: normalizer.py
tests/: quote_verifier_v2_old.py  test_atoms.py  test_engine.py  test_lang.py  test_loader.py  test_performance.py  test_quote_verifier.py
validation/: readme.pltg
(+73 files in other folders)
