[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parseltongue"
version = "0.1.0"
description = "Parseltongue: a DSL for systems which refuse to speak falsehood"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Parseltongue Contributors"}]

[project.urls]
Repository = "https://gitlab.com/sci2sci-opensource/parseltongue"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = ["openai>=1.0", "python-dotenv>=1.0"]

[tool.setuptools.packages.find]
include = ["parseltongue", "parseltongue.*"]
exclude = ["parseltongue.*.tests", "parseltongue.*.tests.*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["parseltongue/core/tests", "parseltongue/llm/tests"]
