[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parseltongue-dsl"
version = "0.3.3"
description = "Parseltongue: a DSL for systems which refuse to speak falsehood"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Valerii Kremnev"}]
keywords = ["dsl", "formal-verification", "evidence", "consistency", "llm", "fact-checking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
"Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sci2sci-opensource/parseltongue"
Repository = "https://github.com/sci2sci-opensource/parseltongue.git"
Issues = "https://github.com/sci2sci-opensource/parseltongue/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
llm = ["openai>=1.0", "python-dotenv>=1.0"]
cli = [
    "parseltongue-dsl[llm]",
    "typer>=0.9.0",
    "textual>=0.50.0",
    "rich>=13.0.0",
    "docling>=2.0.0",
]

[project.scripts]
parseltongue = "parseltongue.cli.app:main"

[tool.setuptools.packages.find]
include = ["parseltongue", "parseltongue.*"]
exclude = ["parseltongue.*.tests", "parseltongue.*.tests.*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.tcss"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"parseltongue/llm/prompts.py" = ["E501"]
"parseltongue/core/demos/**" = ["E501"]
"parseltongue/llm/demos/**" = ["E501"]
"parseltongue/core/tests/**" = ["E501", "E731", "F841"]
"parseltongue/llm/tests/**" = ["E501", "F841"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["parseltongue/core/tests", "parseltongue/llm/tests"]
addopts = "-v --tb=short"
